refactor: 추후 변경 가능성을 감안해 ui 부분을 interface로 정의