@@ -1,6 +1,8 @@
 package calculator.domain.input;
 
 import calculator.domain.delimiter.Delimiters;
+import calculator.exception.BusinessException;
+import calculator.exception.CalculatorExceptionMessage;
 
 import java.util.Arrays;
 import java.util.List;
@@ -10,6 +12,7 @@ public class InputParser {
 
     private static final String CUSTOM_DELIMITER_END_SEPARATOR = "\n";
     private static final int INDEX_PUSH_RIGHT = 1;
+    public static final String DELIMITER_JOINER = "|";
 
     private final Delimiters delimiters;
 
@@ -20,21 +23,30 @@ public class InputParser {
     public List<Integer> extractNumbersFromInput(final String input) {
         String delimiterRegex = getDelimiterPattern(input);
 
-        return Arrays.stream(input.substring(input.indexOf(CUSTOM_DELIMITER_END_SEPARATOR) + INDEX_PUSH_RIGHT).split(delimiterRegex))
-                .map(this::parse).collect(Collectors.toList());
+        String numbers = input.substring(input.indexOf(CUSTOM_DELIMITER_END_SEPARATOR) + INDEX_PUSH_RIGHT);
+
+        return Arrays.stream(numbers.split(delimiterRegex)).map(this::parse).toList();
     }
 
     private String getDelimiterPattern(String input) {
         return delimiters.getAllDelimiters(input)
                 .stream().filter(delimiter -> !delimiter.isBlank())
-                .collect(Collectors.joining("|"));
+                .collect(Collectors.joining(DELIMITER_JOINER));
     }
 
     private int parse(final String input) {
         try {
-            return Integer.parseInt(input);
+            int number = Integer.parseInt(input);
+            validateNegativeNumber(number);
+            return number;
         } catch (Exception e) {
-            throw new IllegalArgumentException("잘못된 값입니다.");
+            throw new BusinessException(CalculatorExceptionMessage.INVALID_PARAMETER_EXCEPTION);
+        }
+    }
+
+    private void validateNegativeNumber(int number) {
+        if (number < 0) {
+            throw new BusinessException(CalculatorExceptionMessage.INVALID_PARAMETER_EXCEPTION);
         }
     }
 }
